added ApiGatewayAsyncClientSupplier and make sure it auto close